[package]
name = "things"
version = "0.1.0"
authors = ["Tucker Morgan <tucker.bull.morgan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tsuga = {"path" = "../tsuga"}
euphoria = {"path" = "../euphoria"}
gymnasium = {"path" = "../gymnasium"}

ndarray = "0.13"

ndarray-stats = "0.3"
ndarray-rand = "0.11"
image = "0.23"
imageproc = "0.20"
rand = "0.7"

crossterm = "0.17"
indicatif = "0.15"

serial_test = "0.4"
mnist = {version = "0.4.1", features=["download"]}
minifb = "0.18"
cifar-ten = "0.1"